[Mac][Material Design] Increase space between home button and Omnibox.

When the home button is visible in Material Design it's too close to
the Omnibox. This cl adds the proper spacing.

R=tapted@chromium.org
BUG=625190

Review-Url: https://codereview.chromium.org/2208593002
Cr-Commit-Position: refs/heads/master@{#409553}

Former-commit-id: b1aa063a58ac043b5f4a8c6d7e9115e6ec2b8f05